# ParaVera_Rag

./: .gitignore  Encoder_Details.md  LICENSE  ParaveraRag_PipeLine.txt  README.md  config.py  dataset_load.py  embeddings.py  eval_test_set.json  evaluation.py  main.py  populate_chroma.py  pyproject.toml  rag_cli.py  requirements.txt  test1.py
correction/: __init__.py  self_corrector.py
evaluation/: __init__.py  baseline_runner.py  metrics.py  run_eval.py
generation/: __init__.py  llm_generator.py
paraverrag/: __init__.py  cli.py  config.py  data.py  evaluation.py  llm_client.py  populate.py  rag.py
paraverrag/retrieval/: __init__.py  opencl_cosine.py  sharded_retrieve.py
paraverrag/verification/: __init__.py  consistency_agent.py  contradiction_agent.py  hallucination_agent.py  pipeline.py  text.py
retrieval/: __init__.py  encoder.py  parallel_retriever.py  worker.py
retrieval_shards/: shard_manifest.json
scoring/: __init__.py  gpu_scorer.py
scoring/kernels/: cosine_similarity.cl
verification/: __init__.py  agent_runner.py  consistency_agent.py  contradiction_agent.py  hallucination_agent.py  nli_shared.py
