[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "paraverrag"
version = "0.1.0"
description = "Retrieval-augmented QA with Chroma, sentence-transformers, HTTP LLM, and verification agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ParaVerRAG contributors" }]
dependencies = [
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
    "transformers>=4.36.0",
    "datasets>=2.14.0",
    "requests>=2.28.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
opencl = ["pyopencl>=2024.1"]

[project.scripts]
paraverrag = "paraverrag.cli:main"
paraverrag-eval = "paraverrag.evaluation:main"
paraverrag-ingest = "paraverrag.populate:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["paraverrag*"]
